crates/wdl-ast/tests/validation/duplicate-input/source.errors
error: task `t` contains a duplicate input section
   ┌─ tests/validation/duplicate-input/source.wdl:10:5
   │
 6 │     input {
   │     ----- first input section is defined here
   ·
10 │     input {
   │     ^^^^^ this input section is a duplicate

error: workflow `w` contains a duplicate input section
   ┌─ tests/validation/duplicate-input/source.wdl:22:5
   │
18 │     input {
   │     ----- first input section is defined here
   ·
22 │     input {
   │     ^^^^^ this input section is a duplicate

